--- a/todolist/app.css
+++ b/todolist/app.css
@@ -1,6 +1,14 @@
+    .main-content {
+        display: grid;
+        grid-template-rows: 10fr 45fr 1fr;
+    }
+    
     .logo {
         display: grid;
         grid-template-columns: repeat(3, 1fr);
+        height: 138px;
+        z-index: 1;
+        background-color: rgb(167, 56, 56);
     }
     
     .navigation-items {
@@ -109,6 +117,20 @@
         border-radius: 5px;
     }
     
+    .container-2 input#modalTaskTodos {
+        width: 350px;
+        height: 50px;
+        background: #fdfeff;
+        border: 1px solid black;
+        font-size: 15pt;
+        float: left;
+        color: #111314;
+        padding-left: 10px;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px;
+    }
+    
     .container-2 input#inputTaskToday {
         width: 350px;
         height: 50px;
@@ -192,6 +214,20 @@
         border-radius: 5px;
     }
     
+    .container-2 input#modal-schedule {
+        height: 50px;
+        background: #253a50;
+        border: 1px solid black;
+        font-size: 15pt;
+        float: left;
+        color: #cae0eb;
+        padding-left: 10px;
+        margin-left: 10%;
+        -webkit-border-radius: 5px;
+        -moz-border-radius: 5px;
+        border-radius: 5px;
+    }
+    
     .container-1 input#search::-webkit-input-placeholder {
         color: #65737e;
     }
@@ -243,6 +279,24 @@
     }
     
     .container-2 input#inputTaskTodos:-ms-input-placeholder {
+        color: #65737e;
+    }
+    
+    .container-2 input#modalTaskTodos::-webkit-input-placeholder {
+        color: #65737e;
+    }
+    
+    .container-2 input#modalTaskTodos:-moz-placeholder {
+        /* Firefox 18- */
+        color: #65737e;
+    }
+    
+    .container-2 input#modalTaskTodos::-moz-placeholder {
+        /* Firefox 19+ */
+        color: #65737e;
+    }
+    
+    .container-2 input#modalTaskTodos:-ms-input-placeholder {
         color: #65737e;
     }
     
@@ -327,6 +381,12 @@
         outline: rgb(151, 93, 93);
     }
     
+    .container-2 input#modalTaskTodos:hover,
+    .container-2 input#modalTaskTodos:focus,
+    .container-2 input#modalTaskTodos:active {
+        outline: rgb(151, 93, 93);
+    }
+    
     .container-2 input#inputTaskToday:hover,
     .container-2 input#inputTaskToday:focus,
     .container-2 input#inputTaskToday:active {
@@ -340,21 +400,21 @@
     }
     
     .grid {
-        display: grid;
-        grid-template-columns: 1fr;
-        margin-top: 5%;
-        height: 600px;
+        margin-top: 2%;
     }
     
     .content {
         display: grid;
         grid-template-columns: 20fr 1fr 40fr;
+        width: 100%;
         height: 600px;
     }
     
     .menu-items {
         display: grid;
         grid-template-rows: repeat(2, 1fr);
+        height: 600px;
+        margin-top: 5%;
     }
     
     .inbox-item {
@@ -368,13 +428,29 @@
         margin-left: 1%;
     }
     
+    input[type=date] {
+        display: -webkit-flex;
+    }
+    
     .add-task-button {
         height: 34px;
         width: 100px;
         margin-top: 1%;
     }
     
+    .modal-add-task {
+        height: 34px;
+        width: 100px;
+        margin-top: 1%;
+    }
+    
     .cancel-adding-button {
+        height: 34px;
+        width: 100px;
+        margin-top: 1%;
+    }
+    
+    .modal-cancel-button {
         height: 34px;
         width: 100px;
         margin-top: 1%;
@@ -430,7 +506,6 @@
         display: grid;
         grid-template-columns: 1fr 60fr;
         margin-left: 1%;
-        margin-top: 2%;
     }
     
     .addtask-label-todos {
@@ -504,12 +579,19 @@
     
     .horizontal-line {
         position: relative;
-        width: 220px;
-        margin-right: 70px;
+        width: 50%;
+        height: 1%;
+        margin-top: 0;
+        margin-right: 17%;
     }
     
     .vertical-line {
-        color: black
+        background-color: rgb(128, 31, 31);
+        margin: 10px;
+    }
+    
+    .navigation-divisions {
+        margin-left: 2%;
     }
     
     .projects {
@@ -529,6 +611,19 @@
     
     .project-labels {
         margin-left: 5%;
+    }
+    
+    footer {
+        height: 50px;
+        margin-bottom: -5%;
+        background-color: #888;
+        text-align: center;
+    }
+    
+    footer p {
+        margin-top: 1%;
+        font-size: 15px;
+        font-weight: bold;
     }
     
     .filters {
@@ -553,8 +648,7 @@
     
     .menu-list {
         display: grid;
-        grid-template-rows: repeat(3, 1fr);
-        height: 250px;
+        grid-template-rows: 3fr 3fr 3fr 10fr;
     }
     
     .today-header {
@@ -565,6 +659,106 @@
     #todays-date {
         margin-top: 3.8%;
         color: gray;
+    }
+    
+    .remove-animatedly {
+        -webkit-animation: removed-item-animation .6s cubic-bezier(.55, -0.04, .91, .94) forwards;
+        -o-animation: removed-item-animation .6s cubic-bezier(.55, -0.04, .91, .94) forwards;
+        animation: removed-item-animation .6s cubic-bezier(.55, -0.04, .91, .94) forwards
+    }
+    
+    @keyframes removed-item-animation {
+        from {
+            opacity: 1;
+            -webkit-transform: scale(1);
+            -ms-transform: scale(1);
+            -o-transform: scale(1);
+            transform: scale(1)
+        }
+        to {
+            -webkit-transform: scale(0);
+            -ms-transform: scale(0);
+            -o-transform: scale(0);
+            transform: scale(0);
+            opacity: 0
+        }
+    }
+    
+    @-webkit-keyframes removed-item-animation {
+        from {
+            opacity: 1;
+            -webkit-transform: scale(1);
+            transform: scale(1)
+        }
+        to {
+            -webkit-transform: scale(0);
+            transform: scale(0);
+            opacity: 0
+        }
+    }
+    
+    @-o-keyframes removed-item-animation {
+        from {
+            opacity: 1;
+            -o-transform: scale(1);
+            transform: scale(1)
+        }
+        to {
+            -o-transform: scale(0);
+            transform: scale(0);
+            opacity: 0
+        }
+    }
+    
+    .isOverflowing {
+        height: 350px;
+        overflow: scroll;
+    }
+    
+    .modal {
+        display: none;
+        position: fixed;
+        z-index: 1;
+        left: 0;
+        top: 0;
+        width: 100%;
+        height: 100%;
+        overflow: auto;
+        background-color: rgb(0, 0, 0);
+        background-color: rgba(0, 0, 0, 0.4);
+    }
+    
+    .modal-content {
+        background-color: #fefefe;
+        margin: 15% auto;
+        padding: 20px;
+        border: 1px solid #888;
+        width: 50%;
+        height: 30%;
+    }
+    
+    .modal-header {
+        font-size: 15px;
+        font-weight: bold;
+        margin-left: -2%;
+    }
+    
+    .modal-input {
+        margin-top: 5%;
+    }
+    
+    .close {
+        color: #aaa;
+        float: right;
+        font-size: 28px;
+        font-weight: bold;
+    }
+    
+    .close:hover,
+    .close:focus {
+        color: black;
+        text-decoration: none;
+        cursor: pointer;
     }
     /* .tasks {
     position: absolute;
